# XAI-driven-DL

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/processed/tfidf/: feature_names.json
outputs/: README.md
outputs/reports/: Appendix 1 cross-validation report.txt  Appendix 2.xlsx  Final_Analysis_Report_20260320_172709.txt
outputs/tfidf/: all_nonzero_distinguishing_ngrams_test.txt  full_stacking_pipeline.pkl  most_distinguishing_ngrams_test.txt  top_ngrams_per_class_test.txt
outputs/vae/: full_stacking_pipeline.pkl  interpretation_report.json  log_classification_report.txt  perturbation_analysis.xlsx  perturbation_results.json  sbert_stacking_report_20260320_154645.txt  stacking_report.txt  stacking_report_20260317_152255.txt  vae_loss.npy  vae_model.pth
tests/: conftest.py  test_cli.py  test_common.py  test_datasets_and_model.py  test_integration_smoke.py
tools/: final_cls.py  plot.py  run.py  tfidf_preprocessed.py  tfidf_vote.py  train_cls.py  vote_cls.py
xai_for_stylistic_analysis/: __init__.py  cli.py  datasets.py
xai_for_stylistic_analysis/vae/: VAE.py  __init__.py  common.py  dataset.py  feature_importance.py  fetch_sbert_model.py  final_cls.py  final_cls_sbert.py  log_cls.py  pertubation.py  plot.py  preprocess.py  train_VAE.py  train_cls.py  train_cls_sbert.py  vote_cls.py  vote_cls_sbert.py
